# invenio-fts

./: AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  run-tests.sh  setup.cfg
.github/workflows/: tests.yml
invenio_fts/: manager.py  persistency.py
invenio_fts/search/component_templates/os-v2/: fts.json
invenio_fts/search/index_templates/os-v2/: fts.json
tests/: conftest.py  fts_test.py
