# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2023 CERN.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-fts
version = attr: invenio_fts.__version__
description = FTS support for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio fts
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-fts
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    fts3
    invenio-app

[options.extras_require]
tests =
    mock>=4.0.0
    pytest-black>=0.3.0
    pytest-invenio>=1.4.5
    Sphinx>=4.2.0,<6

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
; pydocstyle requires python > 3.6
; addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_xrootd --cov-report=term-missing
addopts = --black --isort --doctest-glob="*.rst" --doctest-modules --cov=invenio_fts --cov-report=term-missing
testpaths = tests invenio_fts

